@@ -33,14 +33,14 @@ gnome-gconf
 @Returns: 
 
 
-<!-- ##### FUNCTION gnome_gconf_lazy_init ##### -->
+<!-- ##### MACRO gnome_gconf_lazy_init ##### -->
 <para>
 
 </para>
 
 
 
-<!-- ##### FUNCTION gnome_gconf_module_info_get ##### -->
+<!-- ##### MACRO gnome_gconf_module_info_get ##### -->
 <para>
 
 </para>
