@@ -2,12 +2,22 @@
 gnome-i18n
 
 <!-- ##### SECTION Short_Description ##### -->
-
+Support for localization and internationalization.
 
 <!-- ##### SECTION Long_Description ##### -->
 <para>
-
+This module allows the programmer to internationalize his application by
+providing functions to retrieve the preferred languages of the user as well as
+temporarily move back to the C locale for performing locale independent
+operations.
 </para>
+<note>
+  <para>
+  A lot of the internationalization functions which were in this module in
+  GNOME 1 have now moved to libbonobo for GNOME 2 (_(), textdomain(),
+  gettext(), etc).
+  </para>
+</note>
 
 <!-- ##### SECTION See_Also ##### -->
 <para>
