@@ -23,7 +23,7 @@ gnome-util
 @Returns: 
 
 
-<!-- ##### FUNCTION g_concat_dir_and_file ##### -->
+<!-- ##### MACRO g_concat_dir_and_file ##### -->
 <para>
 
 </para>
