@@ -1,3 +1,8 @@
+2001-10-4 Malcolm Tredinnick <malcolm@commsecure.com.au>
+
+	* gnome-program.c, gnome-exec.c, gnome-18n.c: Documentation
+	updates.
+
 Sun Sep 30 14:41:52 2001  George Lebl <jirka@5z.com>
 
 	* gnome-program.c: free data on finalize, copy argv stuff, and a bit
